--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -19,7 +19,7 @@
 }
 
 #home header h1 {
-    color: #FFF;
+    color: var(--white);
     font-size: 4em;
     font-weight: bold;
     text-align: right;
@@ -37,6 +37,10 @@
     margin-top: 1px;
     position: relative;
     overflow: hidden;
+}
+
+#home .gallery figure img {
+    width: 100%;
 }
 
 #home .gallery figure figcaption {
@@ -58,15 +62,15 @@
 #home .gallery figure figcaption p {
     margin: 0;
     font-size: 12px;
-    color: #ccc;
+    color: var(--grayC);
 }
 
 
 #home header a {
-    border: #fff 2px solid;
+    border: var(--white) 2px solid;
     border-radius: 8px;
     padding: 10px 32px;
-    color: #fff;
+    color: var(--white);
     text-transform: uppercase;
     text-decoration: none;
 }
@@ -87,13 +91,13 @@
 
 #home .inspiration .text h2 {
     font-size: 40px;
-    color: #333;
+    color: var(--gray3);
     text-transform: uppercase;
     margin: 1em 0;
 }
 
 #home .inspiration .text p {
-    color: #555;
+    color: var(--gray5);
     text-align: right;
     max-width: 75vw;
     font-size: 24px;
@@ -110,3 +114,25 @@
     top: 210px;
     left: -330px;
 }
+
+#home .know {
+    background-color: var(--light);
+    flex-direction: column;
+    align-items: center;
+    padding: 3em 2em;
+}
+
+#home .know h1 {
+    font-size: 50px;
+    font-weight: bold;
+    text-align: right;
+    color: var(--gray3);
+    margin: 1em 0;
+}
+
+#home .know img {
+    width: 194px;
+}
+
+
+
