--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -55,3 +55,54 @@
         background-image: url('/assets/images/header-contact@2x.png');
     }
 }
+
+@media (min-width: 992px) {
+    #contact.page header {
+        background-image: url('/assets/images/header-contact@3x.png');
+        background-position: 0px -22vw;
+    }
+
+    #contact.page > section {
+        flex-direction: row;
+    }
+
+    #contact.page > section form,
+    #contact.page > section #map {
+        /* Distribua a largura automaticamente */
+        flex: 1;
+    }
+
+    #contact.page > section #map {
+        margin: 1em;
+        margin-left: 0;
+    }
+
+    #contact.page .contacts {
+        flex-direction: row;
+    }
+
+    #contact.page .contacts li {
+        /* para deixar os ícones desgrudados */
+        margin-right: 1em;
+    }
+
+    #contact.page .contacts li:last-child {
+        /* no último ícone, o espaço foi demais, retire somente do último */
+        margin-right: 0;
+    }
+
+    #contact.page hr.divider {
+        background-color: var(--grayC);
+        height: 1px;
+        width: calc(100% - 2em);
+        margin: 3em 0;
+        border: none;
+        display: flex;
+        align-self: center;
+    }
+
+    #contact.page .contacts li {
+        /* descole do rodapé */
+        margin-bottom: 2em;
+    }
+}
