--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -2,6 +2,7 @@
 
 * {
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 body, div, article, aside, footer, header,
@@ -143,11 +144,52 @@ a:hover {
 @media (min-width: 576px) {
     .page header {
         height: 45vh;
+        min-height: 300px;
     }
 }
 @media (min-width: 992px) {
+    .page .page-header {
+        width: 100%;
+        flex-direction: column-reverse;
+    }
+    .page header .mask {
+        background-color: transparent;
+        align-items: flex-end;
+    }
 
+    .page header .mask li {
+        font-size: 30px;
+    }
+    .page header .mask h1 {
+        font-size: 100px;
+        text-shadow: 0 3px 6px var(--black15);
+    }
+
+    form .fields {
+        flex-direction: row;
+    }
+
+    form .fields .field {
+        margin-right: 1em;
+    }
+
+    form .fields .field:last-child {
+        margin-right: 0;
+    }
+
+    form .action a {
+        text-align: right;
+    }
+
+    form .field textarea {
+        min-height: 250px;
+    } 
+
+    form button {
+        max-width: 340px;
+    }
 }
+
 /* desktop - telas de 1200px */
 @media (min-width: 1200px) {
     .show-desktop {
