--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -26,6 +26,11 @@
     align-items: center;
     top: -35px;
     z-index: 1;    
+    cursor: pointer;
+}
+
+#footer button:hover {
+    background-color: var(--white);
 }
 
 #footer .columns {
