--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -16,3 +16,22 @@
         background-image: url('/assets/images/header-gallery@2x.png');
     }
 }
+
+
+@media (min-width: 992px) {
+    #gallery.page header {
+        background-image: url('/assets/images/header-gallery@3x.png');
+        background-position: 0px -24vw;
+    }
+
+    #gallery.page .photos {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        margin-top: 4px;
+    }
+    #gallery.page .photos img {
+        width: 33vw;
+        margin-bottom: 4px;
+    }
+}
