--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -3,6 +3,12 @@
     margin-top: -80px;
 }
 
+#home hr {
+    position: absolute;
+    top: 60px;
+    z-index: 1;
+}
+
 #home header {
     width: 100%;
     min-width: 320px;
