--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -11,6 +11,8 @@
     --header: #E5E3FD75;
     --white50: #ffffff80;
     --black75: rgba(0,0,0,0.75);
+    --black50: rgba(0,0,0,0.50);
+    --black15: rgba(0,0,0,0.15);
     --gray3: #333;
     --gray5: #555;
     --gray6: #666;
